# opencore_rustaceans

./: AGENTS.md  CONTEXT-MAP.md  README.md
opencore_rustaceans/: Cargo.toml
opencore_rustaceans/src/: lib.rs  main.rs
opencore_rustaceans/src/app/: app_effects.rs  app_messages.rs  app_state.rs  mod.rs
opencore_rustaceans/src/features/: mod.rs
opencore_rustaceans/src/features/chat/: CONTEXT.md  chat_brand.rs  chat_composer.rs  chat_messages.rs  chat_model.rs  chat_outcome.rs  chat_state.rs  chat_style.rs  chat_view.rs  mod.rs
opencore_rustaceans/src/features/onboarding/: CONTEXT.md  mod.rs  onboarding_feature_card_icon.rs  onboarding_file_persistence.rs  onboarding_galaxy_orb.rs  onboarding_memory_persistence.rs  onboarding_persistence.rs  onboarding_scene_backdrop.rs  onboarding_state.rs  onboarding_view.rs
opencore_rustaceans/src/features/welcome/: CONTEXT.md  mod.rs  welcome_actions.rs  welcome_command_palette.rs  welcome_file_history.rs  welcome_history.rs  welcome_memory_history.rs  welcome_messages.rs  welcome_model.rs  welcome_outcome.rs  welcome_overlay.rs  welcome_state.rs  welcome_view.rs
opencore_rustaceans/src/features/workspace/: CONTEXT.md  mod.rs  workspace_ai_provider.rs  workspace_chat.rs  workspace_credential_store.rs  workspace_file_credential_store.rs  workspace_file_session.rs  workspace_keychain_store.rs  workspace_memory_credential.rs  workspace_memory_session.rs  workspace_messages.rs  workspace_model.rs  workspace_openrouter_catalog.rs  workspace_openrouter_provider.rs  workspace_outcome.rs  workspace_overlay.rs  workspace_scope.rs  (+5 more)
(+12 files in other folders)
