[package]
name = "opencore_rustaceans"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
thiserror = "2.0"
directories = "6.0"
rfd = { version = "0.15", features = ["async-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
keyring = "3"
bytes = "1"

[dev-dependencies]
tempfile = "3"
